src/Dapr.Osservability.Sample/src/APIGateways/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                generate_request_id: true
                tracing:
                    provider:
                      name: envoy.tracers.zipkin
                      typed_config:
                        "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                        collector_cluster: zipkin
                        collector_endpoint: "/api/v2/spans"
                        collector_endpoint_version: HTTP_JSON
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog                       
                      json_format:
                        time: "%START_TIME%"
                        protocol: "%PROTOCOL%"
                        duration: "%DURATION%"
                        request_method: "%REQ(:METHOD)%"
                        request_host: "%REQ(HOST)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        response_flags: "%RESPONSE_FLAGS%"
                        route_name: "%ROUTE_NAME%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                      path: "/tmp/access.log"
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: dapr_routes
                  virtual_hosts:
                    - name: dapr_backend
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                        - safe_regex:
                            google_re2: {}
                            regex: \*
                        allow_methods: "GET, POST, PUT, DELETE"
                        allow_headers: "authorization, content-type, x-requestid, x-requested-with"
                        allow_credentials: true
                      routes:
                        - name: "catalog"
                          match:
                            prefix: "/a/"
                          route:
                            prefix_rewrite: "/v1.0/invoke/aggregator/method/"
                            cluster: dapr
  clusters:
  - name: dapr
    connect_timeout: 0.25s
    type: strict_dns
    load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1                      
                      port_value: 3500
  - name: zipkin
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
        cluster_name: zipkin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: zipkin
                      port_value: 9411
